update cantata logo

--- a/Android/scenes/cantata/src/main/res/layout/cantata_activity_room_living.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_activity_room_living.xml
@@ -5,14 +5,13 @@
     android:id="@+id/superLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_app_def_dark"
     tools:context=".ui.activity.RoomLivingActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ktv_room_bg" />
+        android:src="@drawable/cantata_room_bg" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal80"
