--- a/Android/scenes/cantata/src/main/res/layout/cantata_view_mic.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_view_mic.xml
@@ -17,15 +17,16 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvUserName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="#99FFFFFF"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivUserAvatar"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="@id/ivUserAvatar"
+        app:layout_constraintStart_toStartOf="@id/ivUserAvatar"
+        app:layout_constraintTop_toBottomOf="@id/ivUserAvatar"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="@string/cantata_zc"
         tools:textColor="@color/black" />
