[FEAT] 4.0.0 login page

--- a/Android/app/src/main/res/layout/app_activity_phone_login.xml
+++ b/Android/app/src/main/res/layout/app_activity_phone_login.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="101dp"
-                android:text="@string/app_welcome_experience"
+                android:text="222222"
                 android:textColor="@color/def_text_color_040"
                 android:textSize="26sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="@string/app_mobile_number"
+                android:text="2222222"
                 android:textColor="@color/def_text_grey_979"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/tvAppName"
@@ -42,7 +42,7 @@
                 style="@style/def_et_input"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="49dp"
-                android:hint="@string/app_please_input_account"
+                android:hint="222222"
                 android:inputType="phone"
                 android:paddingStart="83dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:drawableEnd="@mipmap/ic_arrow_down"
                 android:elevation="2dp"
                 android:text="@string/app_plus_86"
                 android:textColor="@color/def_text_color_040"
@@ -129,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:button="@drawable/bg_cb_check_status_def"
-                android:text="@string/i_agree"
+                android:text="@string/app_login_i_agree"
                 android:textColor="@color/def_text_grey_6c7"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@id/etVCode"
@@ -153,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:button="@drawable/bg_cb_check_status_def"
-                android:text="@string/app_and"
+                android:text="@string/app_login_agreement_and"
                 android:textColor="@color/def_text_grey_6c7"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/tvUserAgreement"
