--- a/Android/app/src/main/res/drawable/app_login_input_border_on.xml
+++ b/Android/app/src/main/res/drawable/app_login_input_border_on.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="12dp" />
-    <solid android:color="#EDF2F9"/>
+    <solid android:color="#FFFFFF"/>
     <stroke
         android:width="2dp"
-        android:color="#2E6CF6"
-        />
+        android:color="#2E6CF6" />
 </shape>
