--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="def_text_grey_edf">#EDF2F9</color>
     <color name="def_text_grey_979">#979CBB</color>
     <color name="def_text_grey_6c7">#6C7192</color>
+    <color name="def_text_grey_869">#86909C</color>
     <color name="black_57">#575757</color>
     <color name="black_08">#080F38</color>
     <color name="black_3d">#3d3f46</color>
@@ -63,6 +64,7 @@
     <color name="black_20_percent">#33000000</color>
     <color name="black_30_percent">#4D000000</color>
     <color name="black_50_percent">#80000000</color>
+    <color name="black_60_percent">#99000000</color>
     <color name="black_70_percent">#B3000000</color>
     <color name="black_80_percent">#CC000000</color>
     <color name="blue">#ff26b5ff</color>
