[Feat] update date main bottom icon

--- a/Android/app/src/main/res/layout/app_fragment_home_index.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/bg_app_def_white"
     android:paddingTop="20dp"
-    tools:context=".home.HomeIndexFragment">
+    tools:context=".home.HomeFindFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
