--- a/Android/app/src/main/res/menu/app_bottom_nav_menu.xml
+++ b/Android/app/src/main/res/menu/app_bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/app_title_home" />
 
     <item
+        android:id="@+id/navigation_find"
+        android:icon="@drawable/btn_home_faxian_selector"
+        android:title="@string/app_title_find" />
+
+    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/btn_home_mine_selector"
         android:title="@string/app_title_mine" />
