--- a/Android/app/src/main/res/navigation/app_mobile_navigation.xml
+++ b/Android/app/src/main/res/navigation/app_mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/app_fragment_home_index" />
 
     <fragment
+        android:id="@+id/navigation_find"
+        android:name="com.agora.entfulldemo.home.HomeFindFragment"
+        android:label="@string/app_title_find"
+        tools:layout="@layout/app_fragment_home_find" />
+
+    <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.agora.entfulldemo.home.HomeMineFragment"
         android:label="@string/app_title_mine"
