--- a/Android/app/src/main/res/layout/app_fragment_home_index.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index.xml
@@ -5,31 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/bg_app_def_white"
-    android:paddingTop="20dp"
     tools:context=".home.HomeFindFragment">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="声网"
-        android:fitsSystemWindows="true"
-        android:textColor="@color/def_text_color_040"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="44dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp"
+        app:tabMode="scrollable"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:tabRippleColor="@android:color/transparent"
+        app:tabSelectedTextColor="@color/black"
+        app:tabTextAppearance="@style/app_TabLayoutTextUnSelected"
+        app:tabTextColor="@color/def_text_grey_303" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvScenes"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPagerLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        app:spanCount="2"
-        tools:listitem="@layout/app_item_home_index"
-        android:paddingHorizontal="5dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="82dp" />
-
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
