--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="def_text_grey_979">#979CBB</color>
     <color name="def_text_grey_6c7">#6C7192</color>
     <color name="def_text_grey_869">#86909C</color>
+    <color name="def_text_grey_303">#303553</color>
+    <color name="def_text_grey_6F7">#6F738B</color>
     <color name="black_57">#575757</color>
     <color name="black_08">#080F38</color>
     <color name="black_3d">#3d3f46</color>
