--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/clSoundCard"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -54,9 +55,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:text="@string/ktv_input_device"
         android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />
 
@@ -70,17 +72,28 @@
         app:layout_constraintTop_toTopOf="@id/mtInputDevice"
         app:layout_constraintBottom_toBottomOf="@id/mtInputDevice" />
 
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/dvInputDevice"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="18dp"
+        android:background="@color/bg_color_blue_31_t10"
+        app:layout_constraintTop_toBottomOf="@+id/mtInputDevice"
+        />
+
     <!--虚拟声卡开关  -->
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtSoundCardSwitch"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:text="@string/ktv_sound_card_switch"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtInputDevice" />
+        app:layout_constraintTop_toTopOf="@id/dvInputDevice" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/mcbSoundCardSwitch"
@@ -93,187 +106,175 @@
         app:layout_constraintBottom_toBottomOf="@+id/mtSoundCardSwitch"
         android:button="@drawable/cb_def_selector" />
 
-    <!--  预设音效  -->
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtPresetSound"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/dvSoundCardSwitch"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/ktv_preset_sound"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtSoundCardSwitch" />
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="18dp"
+        android:background="@color/bg_color_blue_31_t10"
+        app:layout_constraintTop_toBottomOf="@+id/mtSoundCardSwitch"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutPresetSound"
+        android:id="@+id/clSoundCardParams"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:background="@drawable/ktv_bg_rect_radius32_blue"
-        android:padding="12dp"
-        app:layout_constraintCircleRadius="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/mtPresetSound">
+        app:layout_constraintTop_toBottomOf="@id/dvSoundCardSwitch">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ivPresetSoundAvatar"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/portrait01"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearance="@style/ktv_roundStyle" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideHorizontal50"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
-
+        <!--  预设音效  -->
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/mtPresetSoundType"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvSoundType"
             android:layout_height="wrap_content"
-            android:layout_marginStart="11dp"
-            android:ellipsize="end"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="18dp"
+            android:text="@string/ktv_sound_preset_type"
             android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@id/guideHorizontal50"
-            app:layout_constraintStart_toEndOf="@id/ivPresetSoundAvatar"
-            tools:text="Susan Stark" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/mtPresetSoundTypeTips"
+            android:id="@+id/tvSoundTypeSelect"
+            android:layout_height="48dp"
+            android:layout_width="120dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:drawableRight="@mipmap/ktv_ic_arrow_riight"
+            android:textSize="13sp"
+            tools:text="TypeA"
+            android:gravity="center_vertical|end"
+            app:layout_constraintTop_toTopOf="@id/tvSoundType"
+            app:layout_constraintBottom_toBottomOf="@id/tvSoundType"/>
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/dvSoundType"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="18dp"
+            android:background="@color/bg_color_blue_31_t10"
+            app:layout_constraintTop_toBottomOf="@+id/tvSoundType"
+            />
+
+        <!--  增益调节  -->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtGainAdjust"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/ktv_gain_adjust"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/dvSoundType" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtGainAdjustValue"
+            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="3.1f"
+            android:gravity="end"
+            app:layout_constraintTop_toTopOf="@id/mtGainAdjust"
+            app:layout_constraintBottom_toBottomOf="@id/mtGainAdjust"/>
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/pbGainAdjustValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/ktv_gain_adjust"
+            android:max="40"
+            tools:progress="10"
+            android:layout_marginStart="120dp"
+            android:progressDrawable="@drawable/ktv_bg_seekbar_progress"
+            android:thumb="@mipmap/ic_seekbar_btn"
+            app:layout_constraintEnd_toStartOf="@id/mtGainAdjustValue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/mtGainAdjust"
+            app:layout_constraintBottom_toBottomOf="@id/mtGainAdjust"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtGainAdjustTips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="11dp"
             android:ellipsize="end"
             android:gravity="center"
-            android:textColor="@color/grey_e1"
+            android:layout_marginTop="0dp"
+            android:text="@string/ktv_gain_adjust_tips"
+            android:textColor="@color/grey_d5"
             android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@id/ivPresetSoundAvatar"
-            app:layout_constraintTop_toBottomOf="@id/guideHorizontal50"
-            tools:text="Susan Stark" />
+            app:layout_constraintStart_toStartOf="@id/mtGainAdjust"
+            app:layout_constraintTop_toBottomOf="@id/mtGainAdjust" />
 
-        <Spinner
-            android:id="@+id/spinnerPresetSound"
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/dvGainAdjust"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/bg_color_blue_31_t10"
+            app:layout_constraintTop_toBottomOf="@+id/mtGainAdjustTips"
+            />
+
+        <!--  麦克风类型  -->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtMicType"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/ktv_sound_mic_phone_type"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/dvGainAdjust" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtMicTypeSelect"
+            android:layout_height="48dp"
+            android:layout_width="120dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:drawableRight="@mipmap/ktv_ic_arrow_riight"
+            android:textSize="13sp"
+            tools:text="TypeA"
+            android:gravity="center_vertical|end"
+            app:layout_constraintTop_toTopOf="@id/mtMicType"
+            app:layout_constraintBottom_toBottomOf="@id/mtMicTypeTips"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtMicTypeTips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:ellipsize="end"
+            android:gravity="center"
+            android:layout_marginTop="0dp"
+            android:text="@string/ktv_sound_mic_phone_type_tips"
+            android:textColor="@color/grey_d5"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/mtMicType"
+            app:layout_constraintTop_toBottomOf="@id/mtMicType" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/dvMicType"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/bg_color_blue_31_t10"
+            app:layout_constraintTop_toBottomOf="@+id/mtMicTypeTips"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!--  增益调节  -->
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtGainAdjust"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/ktv_gain_adjust"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutPresetSound" />
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtGainAdjustValue"
-        android:layout_height="wrap_content"
-        android:layout_width="30dp"
-        android:layout_marginEnd="20dp"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="3.1f"
-        android:gravity="end"
-        app:layout_constraintTop_toTopOf="@id/mtGainAdjust"
-        app:layout_constraintBottom_toBottomOf="@id/mtGainAdjust"/>
-
-    <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/pbGainAdjustValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@string/ktv_gain_adjust"
-        android:max="40"
-        tools:progress="10"
-        android:layout_marginStart="120dp"
-        android:progressDrawable="@drawable/ktv_bg_seekbar_progress"
-        android:thumb="@mipmap/ic_seekbar_btn"
-        app:layout_constraintEnd_toStartOf="@id/mtGainAdjustValue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/mtGainAdjust"
-        app:layout_constraintBottom_toBottomOf="@id/mtGainAdjust"/>
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtGainAdjustTips"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="@string/ktv_gain_adjust_tips"
-        android:textColor="@color/grey_d5"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/mtGainAdjust"
-        app:layout_constraintTop_toBottomOf="@id/mtGainAdjust" />
-
-    <!--  麦克风类型  -->
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtMircoPhoneType"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/ktv_gain_adjust"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mtGainAdjustTips" />
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtMircoPhoneTypeValue"
-        android:layout_height="wrap_content"
-        android:layout_width="30dp"
-        android:layout_marginEnd="20dp"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="3.1f"
-        android:gravity="end"
-        app:layout_constraintTop_toTopOf="@id/mtMircoPhoneType"
-        app:layout_constraintBottom_toBottomOf="@id/mtMircoPhoneType"/>
-
-    <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/pbMircoPhoneTypeValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@string/ktv_mircrophone_type"
-        android:max="4"
-        tools:progress="2"
-        android:layout_marginStart="120dp"
-        android:progressDrawable="@drawable/ktv_bg_seekbar_progress"
-        android:thumb="@mipmap/ic_seekbar_btn"
-        app:layout_constraintEnd_toStartOf="@id/mtMircoPhoneTypeValue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/mtMircoPhoneType"
-        app:layout_constraintBottom_toBottomOf="@id/mtMircoPhoneType"/>
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtMircoPhoneTypeTips"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="@string/ktv_gain_adjust_tips"
-        android:textColor="@color/grey_d5"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/mtMircoPhoneType"
-        app:layout_constraintTop_toBottomOf="@id/mtMircoPhoneType" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvSoundCardError"
@@ -306,24 +307,6 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:constraint_referenced_ids="tvSoundCardError,tvSoundCardSupport"
-        tools:visibility="visible" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/groupSoundCardSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="mtSoundCardSwitch,mcbSoundCardSwitch"
-        tools:visibility="invisible" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/groupSoundCardSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="mtPresetSound,layoutPresetSound,
-mtGainAdjust,mtGainAdjustValue,pbGainAdjustValue,mtGainAdjustTips,
-mtMircoPhoneType,mtMircoPhoneTypeValue,pbMircoPhoneTypeValue,mtMircoPhoneTypeTips"
         tools:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
