[FIX] sound card error code

--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -307,6 +307,16 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:constraint_referenced_ids="tvSoundCardError,tvSoundCardSupport"
+        tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/groupSoundCardSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="
+        clSoundCardParams,
+        mtSoundCardSwitch, mcbSoundCardSwitch, dvSoundCardSwitch"
         tools:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
