[FIX] select sound actions

--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_type_layout.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_type_layout.xml
@@ -59,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:textColor="#3C4267"
         android:textSize="13sp"
@@ -72,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:textColor="#6F738B"
         android:textSize="13sp"
