--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -120,7 +120,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clSoundCardParams"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         app:layout_constraintTop_toBottomOf="@id/dvSoundCardSwitch">
 
         <!--  预设音效  -->
@@ -167,13 +167,14 @@
             android:layout_width="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
+            android:textSize="13sp"
             android:text="@string/ktv_gain_adjust"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dvSoundType" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/mtGainAdjustValue"
+            android:id="@+id/tvGainAdjustValue"
             android:layout_height="wrap_content"
             android:layout_width="30dp"
             android:layout_marginEnd="20dp"
@@ -181,24 +182,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="3.1f"
             android:gravity="end"
-            app:layout_constraintTop_toTopOf="@id/mtGainAdjust"
-            app:layout_constraintBottom_toBottomOf="@id/mtGainAdjust"/>
+            app:layout_constraintTop_toTopOf="@id/dvSoundType"
+            app:layout_constraintBottom_toBottomOf="@id/dvGainAdjust"/>
 
         <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/pbGainAdjustValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginStart="20dp"
             android:contentDescription="@string/ktv_gain_adjust"
             android:max="40"
             tools:progress="10"
-            android:layout_marginStart="120dp"
             android:progressDrawable="@drawable/ktv_bg_seekbar_progress"
             android:thumb="@mipmap/ic_seekbar_btn"
-            app:layout_constraintEnd_toStartOf="@id/mtGainAdjustValue"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/mtGainAdjust"
-            app:layout_constraintBottom_toBottomOf="@id/mtGainAdjust"/>
+            app:layout_constraintEnd_toStartOf="@id/tvGainAdjustValue"
+            app:layout_constraintBottom_toBottomOf="@id/tvGainAdjustValue"
+            app:layout_constraintTop_toTopOf="@id/tvGainAdjustValue"
+            app:layout_constraintStart_toEndOf="@+id/mtGainAdjustTips"
+            />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtGainAdjustTips"
@@ -231,24 +233,39 @@
             android:layout_width="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
+            android:textSize="13sp"
             android:text="@string/ktv_sound_mic_phone_type"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dvGainAdjust" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/mtMicTypeSelect"
-            android:layout_height="48dp"
-            android:layout_width="120dp"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvMicType"
+            android:layout_height="wrap_content"
+            android:layout_width="30dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            android:drawableRight="@mipmap/ktv_ic_arrow_riight"
-            android:textSize="13sp"
-            tools:text="TypeA"
-            android:gravity="center_vertical|end"
-            app:layout_constraintTop_toTopOf="@id/mtMicType"
-            app:layout_constraintBottom_toBottomOf="@id/mtMicTypeTips"/>
+            tools:text="12"
+            android:gravity="end"
+            app:layout_constraintTop_toTopOf="@id/dvGainAdjust"
+            app:layout_constraintBottom_toBottomOf="@id/dvMicType"/>
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/pbMicType"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/ktv_gain_adjust"
+            android:max="16"
+            tools:progress="10"
+            android:progressDrawable="@drawable/ktv_bg_seekbar_progress"
+            android:thumb="@mipmap/ic_seekbar_btn"
+            app:layout_constraintStart_toStartOf="@+id/pbGainAdjustValue"
+            app:layout_constraintEnd_toStartOf="@id/tvMicType"
+            app:layout_constraintTop_toTopOf="@id/tvMicType"
+            app:layout_constraintBottom_toBottomOf="@id/tvMicType"
+            />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtMicTypeTips"
@@ -274,6 +291,12 @@
             app:layout_constraintTop_toBottomOf="@+id/mtMicTypeTips"
             />
 
+        <View
+            android:id="@+id/vPramsMark"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textview.MaterialTextView
@@ -307,7 +330,7 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:constraint_referenced_ids="tvSoundCardError,tvSoundCardSupport"
-        tools:visibility="visible" />
+        tools:visibility="invisible" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/groupSoundCardSettings"
@@ -317,6 +340,6 @@
         app:constraint_referenced_ids="
         clSoundCardParams,
         mtSoundCardSwitch, mcbSoundCardSwitch, dvSoundCardSwitch"
-        tools:visibility="invisible" />
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
