--- a/Android/app/src/main/res/layout/app_fragment_login_phone_input.xml
+++ b/Android/app/src/main/res/layout/app_fragment_login_phone_input.xml
@@ -64,7 +64,7 @@
             android:maxLines="1"
             android:text="@string/app_plus_86"
             android:textColor="@color/def_text_color_040"
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatEditText
@@ -72,16 +72,15 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="12dp"
-            android:layout_weight="1"
             android:background="@color/white"
             android:hint="@string/app_login_phone_input_input"
+            style="@style/app_def_et_phone_input"
             android:inputType="phone"
-            android:textColor="@color/def_text_color_040"
             android:paddingHorizontal="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/plus86"
             tools:ignore="RtlSymmetry"
-            tools:text="12345678901" />
+            tools:text="1234567890" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/iBtnClearAccount"
