--- a/Android/app/src/main/res/layout/app_view_fade_dots_indicator.xml
+++ b/Android/app/src/main/res/layout/app_view_fade_dots_indicator.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/dot_stroke"
+        android:id="@+id/dotLight"
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_centerInParent="true"
         android:background="@drawable/app_dot_indicator_light" />
 
     <ImageView
-        android:id="@+id/dot"
+        android:id="@+id/dotDark"
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_centerInParent="true"
